# digital-building-models-to-cram

./: LICENSE  README.md
ifc2cram/: .gitignore  docker-compose.yml
ifc2cram/.devcontainer/: devcontainer.json
ifc2cram/cram_ws_build/: CMakeCache.txt  catkin_make.cache
ifc2cram/docker/ros1/: Dockerfile
ifc2cram/docker/ros1/src/: .rosinstall  .rosinstall.bak  CMakeLists.txt
ifc2cram/docker/ros1/src/ifc_bridge/: CMakeLists.txt  lex.yy.cpp  location.hh  package.xml  parser.tab.cpp  parser.tab.hpp  parser_export.hpp
ifc2cram/docker/ros1/src/ifc_bridge/bridge/: RoomGeometry.cpp  RoomGeometry.hpp  toifcgraph.cpp
ifc2cram/docker/ros1/src/ifc_bridge/lexer/: lexer.hpp  lexer.l
ifc2cram/docker/ros1/src/ifc_bridge/model/: BuildingNode.cpp  BuildingNode.hpp  ElementNode.cpp  ElementNode.hpp  Entity.cpp  Entity.hpp  Matrix4x4.cpp  Matrix4x4.hpp  ParamNode.cpp  ParamNode.hpp  Relations.cpp  Relations.hpp  RobotTask.cpp  RobotTask.hpp  SiteNode.cpp  SiteNode.hpp  SpaceBoundaryNode.cpp  SpaceBoundaryNode.hpp  SpaceNode.cpp  SpaceNode.hpp  SpatialNode.cpp  SpatialNode.hpp  SpatialTree.cpp  SpatialTree.hpp  SpatialTreeHelpers.cpp  StoryNode.cpp  StoryNode.hpp
ifc2cram/docker/ros1/src/ifc_bridge/parser/: parser.y
ifc2cram/docker/ros1/src/ifc_bridge/utils/: util.cpp  util.hpp
ifc2cram/docker/ros1/src/ifc_tree_to_graph/: CMakeLists.txt  cram-ifc-building.asd  package.xml
ifc2cram/docker/ros1/src/ifc_tree_to_graph/config/: building_view.rviz
ifc2cram/docker/ros1/src/ifc_tree_to_graph/launch/: building_bullet_world.launch  view_building.launch
ifc2cram/docker/ros1/src/ifc_tree_to_graph/lisp/: ifc-building.lisp  package.lisp
ifc2cram/docker/ros1/src/ifc_tree_to_graph/scripts/: building_urdf_generator.py  config.py  graph_builder.py  ifc_tree_to_graph_node.py  path_finder.py  room_to_mesh.py  visualize_ifc_graph.py
ifc2cram/docker/ros1/src/ifc_tree_to_graph/srv/: GetTaskPath.srv
ifc2cram/files/ifc/: Haus.ifc  Test.ifc
